# ecommerce_core

./: README.md  main.py  pyproject.toml
htmlcov/: index.html
src/: base_product.py  category.py  lawn_grass.py  print_mixin.py  product.py  smartphone.py
tests/: test_base_product.py  test_category.py  test_lawn_grass.py  test_print_mixin.py  test_product.py  test_smartphone.py
