[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce_core"
version = "0.1.0"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]

[tool.flake8]
max-line-length = 119
ignore = "E203, W503"
exclude = ".git, __pycache__, venv, .venv"

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
python_version = "3.9"